<resources>
    <string name="app_name">AnimationPlayground</string>
    <string name="action_settings">Settings</string>
    <string name="create_a_new_task">Create a new task!</string>
    <string name="what_task">Task Name</string>
    <string name="due_date">DD/MM</string>
    <string name="what_time">HH/MM</string>
    <string name="optional_description">optional description</string>
    <string name="submit">Submit</string>
    <string name="add_an_optional_description">Add an optional description</string>
    <string name="what_day_is_your_task_due">What day is your task due?</string>
    <string name="what_is_the_name_of_your_task">What is the name of your task?</string>
    <string name="what_time_is_your_task_due">What time is your task due?</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="pop_task_bubbles">Pop task bubbles!</string>
    <string name="how_important_is_your_task">How important is your task?</string>
    <string name="all_tasks">All Tasks</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="tasks">Tasks</string>
    <string name="bubble_image">Bubble image</string>
</resources>
